// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly (empty) 1`] = `

<div class="ais-Index">
</div>

`;

exports[`renders correctly (with slot used) 1`] = `

<div class="ais-Index">
  <div>
    Hi there, this is the main slot
  </div>
</div>

`;
